# hq

./: .gitignore  .readthedocs.yml  .rtd-environment.yml  LICENSE.rst  MANIFEST.in  README.md  README.rst  environment.yml  pyproject.toml  setup.cfg  setup.py
docs/: conf.py  index.rst
docs/hq/: index.rst
hq/: __init__.py  config.py  conftest.py  data.py  io.py  log.py  mass_helpers.py  mcmc_helpers.py  physics_helpers.py  plot.py  sample_prior.py  samples_analysis.py  samples_helpers.py  script_helpers.py  setup_package.py  template_config.py  template_config.yml  util.py
hq/cli/: analyze_joker_samplings.py  analyze_mcmc_samplings.py  combine_metadata.py  expand_samples.py  helpers.py  init_run.py  main.py  make_prior_cache.py  make_tasks.py  run_constant.py  run_mcmc.py  run_thejoker.py  run_thejoker_again.py  status.py
hq/db/: __init__.py  connect.py  helpers.py  init.py  model.py  numpy_adapt.py  quantity_type.py  query_helpers.py
hq/db/tests/: setup_package.py  test-allStar.fits  test-allVisit.fits  test_connect.py  test_database.py  travis_db.yml
hq/hierarchical/: period_ecc.py
hq/pkgdata/: _test_config.py  _test_config.yml  _test_prior.py  template_config.py  template_config.yml  template_prior.py
hq/tests/: fixtures.py  setup_package.py  test-allStar.fits  test-allVisit.fits  test_config.py  test_mass.py  test_sample_prior.py
licenses/: LICENSE.rst
mpi/: .gitignore  0-pipeline.md  1-setup.sh  2-run.sh  3-fit-constant.sh  4-analyze.sh  5-mcmc.sh  6-mcmc-analyze.sh  7-null-control.sh  8-inject-recover.sh  9-expand.sh  load-apogee.sh  mcmc_taskfile  run-apogee.sh
mpi/rusty/: 2-run.sh  3-fit-constant.sh  4-analyze.sh  5-mcmc.sh  analyze.sh  constant.sh  control.sh  emcee-analyze.sh  emcee.sh  load.sh  make-tasks.sh  run.sh  setup.sh
notebooks/: Calibrate-visit-rv-err.ipynb  Infer-P-e-hierarchical-dumb.ipynb  Infer-P-e-hierarchical.ipynb  Isochrone-interpolator.ipynb  Select-BH-candidates.ipynb  Simple-Linear-Nonlinear-Inference.ipynb  VAC-demo.ipynb  visit-err.stan
run_config/: apogee.yml  redclump.yml  test.yml
scripts/: .gitignore  README.md  _generate_model_columns.py  analyze_emcee_samplings.py  analyze_joker_samplings.py  analyze_mcmc_samplings.py  analyze_samplings.py  combine_metadata.py  db_init.py  db_reset.py  expand_samples.py  fix_old_samples.py  init_db.py  init_run.py  initdb.py  log_munger.py  make_injected_data.py  make_prior_cache.py  make_run.py  make_tasks.py  plot_star.py  run_apogee.py  run_apogee_T.py  run_apogee_async.py  run_apogee_continue_thejoker.py  run_continue_mcmc.py  run_fit_constant.py  run_injected_control.py  run_null_control.py  run_one_star.py  speed_scaling.py  status.py  test_mpi.py  test_mpi_emcee_joker.py  test_mpi_load.py  test_theano.py
scripts/exp1/: README.md  exp1.py  run.sh  sync.sh
scripts/exp2-num-epochs/: Plot exp2.ipynb  README.md  exp2.py  run.sh
