[metadata]
name = hq
author = Adrian M. Price-Whelan
author_email = adrianmpw@gmail.com
description = a pipeline for running The Joker on survey data
long_description = file: README.rst
license = MIT
license_file = LICENSE.rst
url = https://github.com/adrn/hq
edit_on_github = False
github_project = adrn/hq
python_requires = ">=3.7"

[options]
zip_safe = False
packages = find:
install_requires =
    numpy
    astropy>=4.0
    thejoker
    twobody
    schwimmbad
    pymc3
    emcee
    corner
    scipy
    h5py
    pandas
    tqdm
    threadpoolctl
    jupyter_client
    pyyaml
python_requires = >=3.7
setup_requires =
    setuptools_scm


[tool:pytest]
testpaths = "hq" "docs"
astropy_header = true
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst

[flake8]
exclude = extern,sphinx,*parsetab.py,astropy_helpers,ah_bootstrap.py,conftest.py,docs/conf.py,setup.py

[pycodestyle]
exclude = extern,sphinx,*parsetab.py,astropy_helpers,ah_bootstrap.py,conftest.py,docs/conf.py,setup.py
